libshared/oeconnect/include/oeconnect/shm.h

typedef struct oec_shm oec_shm_t;
/*
 * Create a shared-memory region.
 * `name` follows platform conventions:
 *   Windows: "Local\\oeconnect.<pid>.shm" (will be mapped to a Win32 file mapping)
 *   POSIX:   "/oeconnect.<pid>.shm"        (will be passed to shm_open)
 * Returns OEC_OK on success; on failure `*out` is NULL.
 * If `truncate` is non-zero, sets the region size to `size_bytes` and zeroes it.
 */
OEC_API oec_status_t oec_shm_create(
    const char *name, size_t size_bytes, int truncate,
    oec_shm_t **out, void **out_mapped, size_t *out_mapped_size);
/* Open an existing region read/write. */
OEC_API oec_status_t oec_shm_open(
    const char *name, size_t expected_size,
    oec_shm_t **out, void **out_mapped, size_t *out_mapped_size);
/* Close the handle; unmap. On POSIX, owner should also call oec_shm_unlink. */
OEC_API void oec_shm_close(oec_shm_t *s);
/* Remove the name from the system (POSIX shm_unlink). No-op on Windows. */
OEC_API oec_status_t oec_shm_unlink(const char *name);